[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "encryption_service"
version = "0.1.0"
description = "Secure message encryption service for Python applications"
readme = "README.md"
authors = [
    {name = "Uzziel Kibet", email = "uzzielkk@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
]
keywords = [
    "encryption",
    "cryptography",
    "security",
    "key management",
    "message encryption"
]
dependencies = [
    "cryptography>=37.0.0",
]
requires-python = ">=3.8"

[optional-dependencies]
django = ["django>=3.2"]
